--- a/css/7-factorial.css
+++ b/css/7-factorial.css
@@ -247,7 +247,7 @@ input:valid~label {
 
 /*INICIA FONDO*/
 .hero {
-    background-color: #0040C1;
+    background-color: #071a41;
     position: relative;
     height: 100vh;
     overflow: hidden;
