--- a/css/8-numperfecto.css
+++ b/css/8-numperfecto.css
@@ -247,7 +247,7 @@ input:valid~label {
 
 /*INICIA FONDO*/
 .hero {
-    background-color: #a92d69;
+    background-color: #6b0e3b;
     position: relative;
     height: 100vh;
     overflow: hidden;
