--- a/css/9-primo.css
+++ b/css/9-primo.css
@@ -252,7 +252,7 @@ input:valid~label {
 
 /*INICIA FONDO*/
 .hero {
-    background-color: #75dcff;
+    background-color: #369ec0;
     position: relative;
     height: 100vh;
     overflow: hidden;
